--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/darkly/bootstrap.min.css">
   </head>
   <body>
-    <div id="root">
-
-
-    </div>
+    <div id="root" class="container"></div>
   </body>
 </html>
 
